--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.3",
     "i": "^0.3.6",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.4"
   }
 }
